# ucla-cli

./: LICENSE.txt  README.md  pyproject.toml  results
src/ucla_cli/: __about__.py  __init__.py  __main__.py  clean.py  course_titles_view.py  decode.py  get_course_summary.py  glssd.py  results.py
src/ucla_cli/display/: __init__.py  common.py  kv_sections.py  table.py
src/ucla_cli/extract/: __init__.py  building_list.py  calendar_data.py
src/ucla_cli/query/: __init__.py  building_list.py  classroom_detail.py
ucla-cli/: README.md  pyproject.toml
